--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1227,6 +1227,9 @@ small.search_term {
 .select-widget .available {
     border: 1px solid #336699;
     padding: .5em;
+    max-height: 17e,;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 .select-widget .available .answer {
