--- a/views/edit.tt
+++ b/views/edit.tt
@@ -684,12 +684,13 @@
     [% typeaheads.push({id = dispcol.id, field = field }) %]
 [% END %]
 
-[% BLOCK curval_singlevalue_column %]
+[% BLOCK singlevalue_column %]
     <div class="select-widget single">
         <div id="[% field %]_label" class="select-widget-label [% required && 'required' %]">[% label %]</div>
-        <div class="form-group form-control">
+        <button type="button" class="form-group form-control" aria-controls="[% field %]_available_values" 
+                        aria-expanded="false" aria-describedby="[% field %]_label">
             <ul class="current">
-                <li class="none-selected">&lt;blank&gt;</li>
+                <li class="none-selected">blank</li>
             [% FOREACH value IN values %]
                 [% NEXT IF value.deleted %]
                 [% checked = editvalue.id_hash.${value.id} %]
@@ -697,17 +698,9 @@
                 <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">[% value.value | html_entity %]</li>
             [% END %]
             </ul>
-            <span>
-                <button class="change" type="button" aria-controls="[% field %]_available_values" 
-                        aria-expanded="false" aria-describedby="[% field %]_label"
-                >
-                    <span class="expanded">Confirm</span>
-                    <span class="collapsed">Change</span>
- 
-                </button>
-            </span>
-        </div>
-
+            <span class="expanded glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+            <span class="collapsed glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+        </button>
         <ul hidden class="available" id="[% field %]_available_values">
         [% FOREACH value IN values %]
             [% NEXT IF value.deleted %]
@@ -717,48 +710,6 @@
                 <span class="control">
                     <input id="[% value_id %]" type="radio" name="[% field %]" [% checked && 'checked' %] value="[% value.id %]">
                     <label id="[% value_id %]_label" for="[% value_id %]">[% value.value | html_entity %]</label>
-                </span>
-                <span>
-                    <button type="button" class="more-info" data-record-id="[% value.id %]" aria-describedby="[% value_id %]_label">Details</button>
-                </span>
-            </li>
-        [% END %]
-        </ul>
-    </div>
-[% END %]
-
-[% BLOCK curval_multivalue_column %]
-    <div class="select-widget multi">
-        <div id="[% field %]_label" class="select-widget-label [% required && 'required' %]">[% label %]</div>
-        <div class="form-group form-control">
-            <ul class="current">
-                <li class="none-selected">&lt;blank&gt;</li>
-            [% FOREACH value IN values %]
-                [% NEXT IF value.deleted %]
-                [% checked = editvalue.id_hash.${value.id} %]
-                [% value_id = field _ '_' _ value.id %]
-                <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">[% value.mainvalue | html_entity %]</li>
-            [% END %]
-            </ul>
-            <span>
-                <button class="change" type="button" aria-controls="[% field %]_available_values" 
-                        aria-expanded="false" aria-describedby="[% field %]_label"
-                >
-                    <span class="expanded">Confirm</span>
-                    <span class="collapsed">Change</span>
-                </button>
-            </span>
-        </div>
-        <ul hidden class="available" id="[% field %]_available_values">
-        [% FOREACH value IN values %]
-            [% NEXT IF value.deleted %]
-            [% checked = editvalue.id_hash.${value.id} %]
-            [% value_id = field _ '_' _ value.id %]
-            <li>
-                <span class="control">
-                    <input id="[% value_id %]" name="[% field %]" type="checkbox" [% checked && 'checked' %] value="[% value.mainvalue | html_entity %]">
-                    <label id="[% value_id %]_label"for="[% value_id %]">[% value.mainvalue | html_entity %]</label>
-                    <div>[% value.subvalue | html_entity %]</div>
                 </span>
                 <span>
                     <button type="button" class="more-info" data-record-id="[% value.id %]" aria-describedby="[% value_id %]_label">Details</button>
@@ -782,19 +733,20 @@
         IF column.typeahead;
             PROCESS curval_typeahead_column;
         ELSIF column.multivalue;
-            PROCESS curval_multivalue_column;
+            PROCESS multivalue_column;
         ELSE;
-            PROCESS curval_singlevalue_column;
+            PROCESS singlevalue_column;
         END;
     END;
 %]
 
-[% BLOCK enum_multivalue_column %]
+[% BLOCK multivalue_column %]
     <div class="select-widget multi">
         <div id="[% field %]_label"class="select-widget-label [% required && 'required' %]">[% label %]</div>
-        <div class="form-group form-control">
+        <button type="button" class="form-group form-control" aria-controls="[% field %]_available_values" 
+                        aria-expanded="false" aria-describedby="[% field %]_label">
             <ul class="current">
-                <li class="none-selected">&lt;blank&gt;</li>
+                <li class="none-selected">blank</li>
             [% FOREACH value IN values %]
                 [% NEXT IF value.deleted %]
                 [% checked = editvalue.id_hash.${value.id} %]
@@ -802,15 +754,9 @@
                 <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">[% value.value | html_entity %]</li>
             [% END %]
             </ul>
-            <span>
-                <button class="change" type="button" aria-controls="[% field %]_available_values" 
-                        aria-expanded="false" aria-describedby="[% field %]_label"
-                >
-                    <span class="expanded">Confirm</span>
-                    <span class="collapsed">Change</span>
-                </button>
-            </span>
-        </div>
+            <span class="expanded glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+            <span class="collapsed glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+        </button>
         <ul hidden class="available" id="[% field %]_available_values">
         [% FOREACH value IN values %]
             [% NEXT IF value.deleted %]
@@ -830,50 +776,6 @@
     </div>
 [% END %]
 
-[% BLOCK enum_singlevalue_column %]
-    <div class="select-widget single">
-        <div id="[% field %]_label" class="select-widget-label [% required && 'required' %]">[% label %]</div>
-        <div class="form-group form-control">
-            <ul class="current">
-                <li class="none-selected">&lt;blank&gt;</li>
-            [% FOREACH value IN values %]
-                [% NEXT IF value.deleted %]
-                [% checked = editvalue.id_hash.${value.id} %]
-                [% value_id = field _ '_' _ value.id %]
-                <li [% !checked && 'hidden' %] data-list-item="[% value_id %]">[% value.value | html_entity %]</li>
-            [% END %]
-            </ul>
-            <span>
-                <button class="change" type="button" aria-controls="[% field %]_available_values" 
-                        aria-expanded="false" aria-describedby="[% field %]_label"
-                >
-                    <span class="expanded">Confirm</span>
-                    <span class="collapsed">Change</span>
- 
-                </button>
-            </span>
-        </div>
-
-        <ul hidden class="available" id="[% field %]_available_values">
-        [% FOREACH value IN values %]
-            [% NEXT IF value.deleted %]
-            [% checked = editvalue.id_hash.${value.id} %]
-            [% value_id = field _ '_' _ value.id %]
-            <li class="answer">
-                <span class="control">
-                    <input id="[% value_id %]" type="radio" name="[% field %]" [% checked && 'checked' %] value="[% value.id %]">
-                    <label id="[% value_id %]_label" for="[% value_id %]">[% value.value | html_entity %]</label>
-                </span>
-                <span>
-                    <button type="button" class="more-info" data-record-id="[% value.id %]" aria-describedby="[% value_id %]_label">Details</button>
-                </span>
-            </li>
-        [% END %]
-        </ul>
-    </div>
-[% END %]
-
-
 [% BLOCK enum_column;
 
     required = !(dispcol.optional OR page == "bulk");
@@ -887,11 +789,11 @@
     END;
 
     IF dispcol.multivalue;
-        PROCESS enum_multivalue_column;
+        PROCESS multivalue_column;
     ELSE;
         IF dispcol.optional OR editvalue.deleted OR (record.current_id AND NOT editvalue.id) OR NOT record.current_id;
             %] <input type="hidden" name="[% field %]"> [%
         END;
-        PROCESS enum_singlevalue_column;
+        PROCESS singlevalue_column;
     END;
 END %]
