Improve select-widget semantics

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1697,12 +1697,6 @@ small.search_term {
 .select-widget.multi .form-control {
   padding-bottom: 0; }
 
-.select-widget .form-control > * {
-  display: inline-block;
-  vertical-align: top;
-  width: 15%;
-  text-align: right; }
-
 .select-widget .label {
   font-size: 1em;
   font-weight: bold;
@@ -1723,12 +1717,18 @@ small.search_term {
   margin-bottom: .5em;
   text-align: left; }
 
+.select-widget [aria-expanded] {
+  border: none;
+  vertical-align: top; }
+
 .select-widget.single .change {
   margin-top: -.15em;
   padding-top: 0; }
 
-.select-widget button:hover,
-.select-widget button:focus {
+.select-widget .form-group:hover,
+.select-widget .form-group:hover button,
+.select-widget .form-group button:hover,
+.select-widget .form-group button:focus {
   background-color: #eeefff; }
 
 .select-widget .expanded,
@@ -1738,8 +1738,7 @@ small.search_term {
 .select-widget [aria-expanded="false"] .collapsed,
 .select-widget [aria-expanded="true"] .expanded {
   display: inline;
-  margin-top: .2em;
-  float: right; }
+  margin-top: .2em; }
 
 .select-widget ul {
   margin: 0;
@@ -1758,7 +1757,7 @@ small.search_term {
 
 .select-widget .current {
   padding-bottom: .4em;
-  width: 80%;
+  width: 92%;
   text-align: left;
   display: inline-block; }
 
