--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1181,7 +1181,8 @@ small.search_term {
 
 .select-widget [aria-expanded] {
     border: none;
-    vertical-align: top;
+    position: absolute;
+    right: 1.5em;
 }
 
 .select-widget.single .change {
