Multiselect widget - show details only for curval

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1793,8 +1793,11 @@ small.search_term {
   text-align: right; }
 
 .select-widget .available .control {
-  width: 81%;
-  text-align: left; }
+  text-align: left;
+  width: 100%; }
+
+.select-widget .available.with-details .control {
+  width: 81%; }
 
 .select-widget .control label {
   margin-left: .3em;
