--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1270,8 +1270,12 @@ small.search_term {
 }
 
 .select-widget .available .control {
-    width: 81%;
     text-align: left;
+    width: 100%;
+}
+
+.select-widget .available.with-details .control {
+    width: 81%;
 }
 
 .select-widget .control label {
