--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1232,6 +1232,7 @@ small.search_term {
     width: 92%;
     text-align: left;
     display: inline-block;
+    cursor: default;
 }
 
 .select-widget .available {
