--- a/views/edit.tt
+++ b/views/edit.tt
@@ -788,6 +788,7 @@
 [% BLOCK enum_column;
 
     required = !(dispcol.optional OR page == "bulk");
+    details = 0;
 
     IF dispcol.ordering == "desc";
         values = dispcol.enumvals.sort('value').reverse;
