--- a/views/table.tt
+++ b/views/table.tt
@@ -10,6 +10,10 @@
                 <input type="text" name="name" class="form-control" value="[% layout_edit.name | html_entity %]">
             </div>
             <div class="form-group">
+                <label for="name_short">Short name of table (optional):</label>
+                <input type="text" name="name_short" class="form-control" value="[% layout_edit.name_short | html_entity %]">
+            </div>
+            <div class="form-group">
                 <table class="table table-striped">
                     <thead>
                         <tr>
