--- a/views/tree.tt
+++ b/views/tree.tt
@@ -2,31 +2,36 @@
                 $('#jstree[% tree.id %]')
                 .on({
                     'changed.jstree': function (e, data) {
-                        var selectedElms = $('#jstree[% tree.id %]').jstree("get_selected", true);
+                        [%# Remove all existing values of this tree field %]
                         $('.[% tree.field %]').remove();
+                        [%# Add all currently selected values %]
+                        var selectedElms = $('#jstree[% tree.id %]').jstree("get_selected", true);
+                        $.each(selectedElms, function() {
+                            $('#editform').append('<input type="hidden" name="[% tree.field %]" class="[% tree.field %]" value="' + this.id + '" />');
+                        });
 
+                        [%# Check for any display-dependent fields %]
                         var fields_on_change = $("body").data("change" + [% tree.id %] );
-                        fields_on_change.forEach(function(field_on_change) {
-                            var re = field_on_change && field_on_change.re;
-                            var show = false;
-                            $.each(selectedElms, function() {
-                                $('#editform').append('<input type="hidden" name="[% tree.field %]" class="[% tree.field %]" value="' + this.id + '" />');
+                        if (fields_on_change) {
+                            fields_on_change.forEach(function(field_on_change) {
+                                var re = field_on_change && field_on_change.re;
                                 if (re) {
-                                    var val_text = data.instance.get_path(this, '#');
-                                    if (re.test(val_text)) {
-                                        show = true;
+                                    var show = false;
+                                    $.each(selectedElms, function() {
+                                        var val_text = data.instance.get_path(this, '#');
+                                        if (re.test(val_text)) {
+                                            show = true;
+                                        }
+                                    });
+                                    var divid = field_on_change.divid;
+                                    if (show) {
+                                        $("#" + divid ).show()
+                                    } else {
+                                        $("#" + divid ).hide()
                                     }
                                 }
                             });
-                            if (re) {
-                                var divid = field_on_change.divid;
-                                if (show) {
-                                    $("#" + divid ).show()
-                                } else {
-                                    $("#" + divid ).hide()
-                                }
-                            }
-                        });
+                        }
                     }
                     [% IF tree.end_node_only OR tree.multivalue %],
                         'select_node.jstree': function (e, data) {
